--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -42,11 +42,14 @@ jobs:
         run: npm run build
       - name: Setup Pages
         uses: actions/configure-pages@v3
+      - name: Copy built files to root
+        run: |
+          cp -r dist/* .
+          cp -r dist/.* . 2>/dev/null || true
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
-          # Upload dist repository
-          path: './dist'
+          path: '.'
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
